--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,19 @@ body {
   font-size: 2rem;
   border-radius: 1rem;
   font-weight: bold;
+  &::placeholder {
+    color: rgba(0, 0, 0, 0.3);
+    opacity: 1; /* Firefox */
+  }
+
+  &::-ms-input-placeholder {
+    /* Edge 12 -18 */
+    color: rgba(0, 0, 0, 0.3);
+  }
+}
+.players__play-input--error {
+  border: 1px solid rgb(136, 0, 0);
+  box-shadow: 0px 4px 5px #3f1010;
 }
 .players__play-button {
   display: flex;
